2010-12-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/history.py: Added photo history with sqlite.

2010-12-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* image/__init__.py: Added new gconf key: ui/disable_clutter.
	* help/C/gphotoframe.xml: Updated help documentation.
	  Thanks Cristian Marchi!

2010-11-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences/__init__.py, preferences.ui: Enable help button on
	  Preferences.

2010-11-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py: Reset the timer in delete_photo function.
	* shotwell.py (ShotwellTrash): Added support for Shotwell Trash.

2010-11-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* clutterimage.py: Fixed module names for Screen Saver.

2010-11-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* shotwell.py (ShotwellPhotoSQL): Added support for flags on the
	  photo database (deleted photos).

2010-11-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* help/ja/ja.po, po/ja.po: Update Japanese translation.

2010-11-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* help/C/gphotoframe.xml: Updated help documentation.
	  Thanks Cristian Marchi!
	* shotwell.py: Fixed bugs.

2010-11-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* shotwell.py: Added a Shotwell remove function.

2010-11-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot/__init__.py: Fixed an URI encoding (issue #76).

2010-11-02  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/base.py: Added a remove function.
	* fspot/__init__.py: Added a remove catalogue function.

2010-10-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/__init__.py: Added user plugins dir.

2010-10-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/__init__.py, picasa.py: Added kludges for avoiding a json
	  module 1.9 bug.
	* fspot/__init__.py, sqldb.py: Dropped support for F-Spot 0.5.
	* flickr/__init__.py, picasa.py: Dropped depends on simplejson.
	  gphotoframe requires python 2.6.
