@@ -1,5 +1,6 @@
 2010-12-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* image/tooltip.py: More tooltips for Flickr.
 	* utils/history.py: Added photo history with sqlite.
 
 2010-12-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
